# snp500-data-scraper

./: Cargo.toml  README.md  out.txt
src/: helpers.rs  info.out  lib.rs  main.rs  out.txt  parsed.txt  parser.rs  request.rs  snp_list.rs  symbol.out
