[package]
name = "sector_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
polars-core = "0.31.1"
mediawiki_parser = "0.4.2"
wikitext-parser = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
