[package]
name = "snp500_data"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Gets updated basic information the S&P-500 constituants"
repository = "https://github.com/austinjp17/snp500-data-retrieval"
keywords = ["snp500", "s&p-500", "snp500 list", "finance", "stocks"]
categories = ["Finance"]
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
polars-core = {version = "0.31.1", features = ["rows"]}
wikitext-parser = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
parse_wiki_text = "0.1.5"
datetime = "0.5.2"
anyhow = "1.0.72"
tokio-test = "0.4.2"
